# gitnu

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  bench  file  gitnumber.txt  log  run  setup.cfg  setup.py  size  test
.github/workflows/: ci.yml  matrix.json
bash/: file.txt  gitn  install
bash-testing/: some-thing-gitn.json
bench/: README.md  bench  bench.rs  data.rs  filenames.txt  main.rs  test.rs  utils.rs
bench/comparisons/: buffered_vs_sync.rs  dev_null_vs_stdout.rs  mod.rs
c/: Makefile  a.out  bench.js  benchmark.py  cbench  cgit  compile_commands.json  entry.cpp  entry.h  git.cpp  git.h  harsh  main.cpp  queue.cpp  queue.h  shelf.cpp  shelf.h  shell.cpp  shell.h  time.json  time.txt  tsq.cpp  tsq.h
cache/: main.rs  test-cache.txt
cache/texts/: 1.txt  1024.txt  16.txt  16384.txt  256.txt  4.txt  4096.txt  64.txt  generate.py  run
core/: cache.rs  cache_tests.rs  command.rs  error.rs  git.rs  git_cmd.rs  lib.rs  line.rs  macros.rs  main.rs  parser.rs  parser_tests.rs  prelude.rs  status.rs  test.rs  tests.rs
core/tests/: mod.rs  status_parse.rs  util.rs
gitn/: __main__.py  cache.py  data_structure.py  log.py  main.py  read.py  shell.py  strings.py  tests.py  write.py
gitnu/: __init__.py  __main__.py  data_structure.py  main.py  read.py  strings.py  tests.py
python/: Makefile  _git.py  cache.py  data_structure.py  git_utils.py  gitn  log.py  read.py  shell.py  strings.py  tests.py  write.py
scripts/: get-git-commands.py  latest-version.sh  manual-version-increment.sh  publish.sh  test.sh  utils.py  version-increment.sh
shell/: README.md  run
shell/cases/: 01.sh  05.sh  06.sh  10.sh  13.sh  14.sh  16.sh  18.sh  23.sh
src/: __init__.py  actions.rs  app.rs  bin.rs  cache.py  cache.rs  cache_tests.rs  command2.rs  data_structure.py  error.rs  experimental-map.rs  files.rs  git.rs  git_cmd.rs  gitn  guess.rs  install  lib.rs  log.py  main.rs  opts.rs  parse.rs  parser.rs  parser_tests.rs  pathdiff.rs  prelude.rs  range.rs  shell.rs  status.rs  structs.rs  test.rs  tests.rs  traits.rs  unit_tests.rs  write.py
src/actions/: bypass.rs  enumerate.rs  load.rs  mod.rs  read.rs  status.rs  xargs.rs
src/gitnu/: __main__.py  cache.py  data_structure.py  git.py  log.py  main.py  read.py  shell.py  strings.py  tests.py  write.py
src/opts/: actions.rs  cache.rs  commands.rs  mod.rs  parser.rs
src/status/: backend.rs  frontend.rs  mod.rs
src/tests/: macros.rs  mod.rs  parser.rs  status_display.rs  unit.rs
test/: Makefile  test_gitn.py  test_main.py  test_shell.py  test_strings.py
tests/: README.md  command.rs  coverage.rs  data.rs  fancy_states.rs  flags.rs  init  integration.rs  integration2.rs  integration_cli.rs  integration_git.rs  integration_xargs.rs  macros.rs  main.rs  many_files.rs  normal.rs  numbers.rs  parser.rs  read.rs  result.rs  root-gitn.json  run  short.rs  test.rs  test_main.py  unit.rs  util.rs  utils  utils.rs
tests/cases/: 01.sh  02.sh  03.sh  04.sh  05.sh  06.sh  07.sh  08.sh  09.sh  10.sh  11.sh  12.sh  13.sh  14.sh  15.sh  16.sh  17.sh  18.sh  19.sh  20.sh  21.sh  22.sh  23.sh  24.sh  25.sh  26.sh
tests/expected/: 02.txt  03.txt  05.txt  08.txt  09.txt  13.txt  16.txt  17.txt  18.txt  19.txt  21.txt  22.txt
tests/integration/: README.md  run  save  utils
tests/integration/expected/: 01.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  17.txt  18.txt  20.txt
tests/integration/tests/: 03.sh  05.sh  (+11 more)
tests/utils/: mod.rs
