[package]
name = "gitnu"
version = "0.7.1"
authors = ["Nguyen Vu Khang <brew4k@gmail.com>"]
description = """
gitnu indexes your git status so you can use numbers instead of filenames.
"""
homepage = "https://github.com/nguyenvukhang/gitnu"
repository = "https://github.com/nguyenvukhang/gitnu"
documentation = "https://github.com/nguyenvukhang/gitnu"
keywords = ["git"]
categories = ["command-line-utilities"]
license = "MIT"
autotests = false
edition = "2021"

[dependencies]
atty = "0.2.14"

[[bin]]
bench = false
test = false
path = "src/main.rs"
name = "git-nu"

[lib]
doctest = false
test = false
