[metadata]
name = gitnu
version = 0.0.25-alpha.5
author = Khang
author_email = brew4k@gmail.com
description = Enumerate git status
long_description = A cli tools that indexes the output of git status to use in subsequent git commands.
keywords = git, cli, python3
license_file = LICENSE
project_urls =
    Source = https://github.com/nguyenvukhang/gitnu
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X

[options]
packages = find:
package_dir =
    =src

[options.entry_points]
console_scripts =
    gitnu = gitnu.__main__:main

[options.packages.find]
where = src
include = gitnu*
exclude =
    test*
    test/repo*
