[metadata]
name = gitnu
# https://peps.python.org/pep-0440/#final-releases
# https://peps.python.org/pep-0440/#pre-releases
version = 0.1.1a5
author = Khang
author_email = brew4k@gmail.com
description = Enumerate git status
long_description = file:README.md
long_description_content_type = text/markdown
keywords = git, cli, python3
license_file = LICENSE
project_urls =
    Source = https://github.com/nguyenvukhang/gitnu
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X

[options]
packages = find:
package_dir =
    =src

[options.entry_points]
console_scripts =
    gitnu = gitnu.__main__:main

[options.packages.find]
where = src
include = gitnu*
exclude =
    doc/*
    test*
    test/repo*
    c/*
